--- a/intro.tex
+++ b/intro.tex
@@ -41,24 +41,22 @@ periodic inventories. The first two rework cycles before 2014
 involving blade mechanical assemblies can be characterized as a
 break-in period on a new system that is first of its kind and pushes
 many technological boundaries. \rev{This early period included
-  extensive field engineering and experimentation to determine cause,
-  down times, and large temporal and completeness gaps in inventory
-  runs. We include the early swap data in this figure only for
-  completeness and to underscore the amount of work required to field
-  a world's largest supercomputer. However, we exclude this period
-  from further analysis because we have a gap in explanation for one
-  of the swap spikes and because the separation is made possible by
-  the second, late 2013, GPU rework cycle.} Late 2013 begins a very
-long period of high reliability and stable operation with very few
-issues until about mid 2016, when GPU failures begin to rise. This
-results in the final rework cycle, replacing 11,000 GPUs throughout
-much of 2017.
+  extensive field engineering and experimentation, down times, as well
+  as temporal and completeness gaps in inventory runs due to down
+  times. We include the early swap data in this figure only for
+  completeness and to underscore the massive amount of hardware work
+  required to field a world's largest supercomputer. However, as we
+  focus on GPU operation after the second rework cycle we exclude this
+  early period from further analysis.} Late 2013 begins a very long
+period of high reliability and stable operation with very few issues
+until about mid 2016, when GPU failures begin to rise. This results in
+the final rework cycle, replacing 11,000 GPUs throughout much of 2017.
 
 Finding the root cause for the 2016 failures took a great deal of
-testing and involvement of materials science and microscopy
+testing and the involvement of materials science and microscopy
 researchers. The failures were traced to a resistor on the GPU circuit
 board (not the GPU chip iself) \fix{Was anything published about this?
-  If not, we may use \cite{Vargas2009TheCO}}. Throughout this paper,
+  If not, let's use \cite{Vargas2009TheCO}}. Throughout this paper,
   when we refer to replacing the GPU, we refer to the entire
   circuitboard along with its GPU chip.
 
