--- a/tbf.tex
+++ b/tbf.tex
@@ -46,7 +46,7 @@ data with an unusually short MTBF because we use the {\em insert} time as
 a reference for the first failure on a relocated GPU. This drawback is
 balanced by the advantage that this way we can discount out of service times
 which were frequent particularly during early 2017 as can be seen in
-Fig.~\ref{fig:locview}.
+the location view of Fig.~\ref{fig:gpu-view}.
 
 On the other end of the spectrum, a noticeable portion of GPUs have very high
 MTBFs and their failures are mostly DBEs. These are the GPUs that see continuous operation in the machine 
