--- a/dataclean.tex
+++ b/dataclean.tex
@@ -35,22 +35,7 @@ OTB events.
 
 To get some intuition for the GPU lifetimes on Titan, we give two
 views of \rev{80} randomly selected GPUs and \rev{80} randomly
-selected locations (\rev{Fig.}~\ref{fig:gpu-view}).
-\begin{figure*}[p]
-  \begin{center}
-  \includegraphics[trim=0 7 0 5,clip,width=6.5in]{figs/sample_sn.pdf} \\
-  (a) \\[1em]
-  \includegraphics[trim=0 7 0 5,clip,width=6.5in]{figs/sample_loc.pdf} \\
-  (b)
-  \end{center}
-  \caption{\rev{Serial number view (a) and location view (b) of GPU
-      life and failures. Both SN and locations are randomly
-      selected. Legend: black dots are installs, black lines are
-      lifetimes at installed location, blue squares are OTB events,
-      red triangles are DBE events, and black ] are ``last seen''
-      events.}}
-  \label{fig:gpu-view}
-\end{figure*}
+selected locations \rev{in Fig.~\ref{fig:gpu-view}}.
 The GPU view
 visually documents the life of each GPU unit: when it was installed and
 removed at various locations, its DBE and OTB events, and the last
