--- a/main.tex
+++ b/main.tex
@@ -90,6 +90,12 @@ rizwan.ashraf@knights.ucf.edu}
 Oak Ridge, TN, USA\\
 engelmannc@ornl.gov}
 \and
+\IEEEauthorblockN{4\textsuperscript{th} Mallikarjun Shankar}
+\IEEEauthorblockA{\textit{National Center for Computational Sciences Division}\\
+\textit{Oak Ridge National Laboratory}\\
+Oak Ridge, TN, USA\\
+shankarm@ornl.gov}
+\and
 \IEEEauthorblockN{5\textsuperscript{th} James Rogers}
 \IEEEauthorblockA{\textit{National Center for Computational Sciences Division}\\
 \textit{Oak Ridge National Laboratory}\\
