update views fig

--- a/dataclean.tex
+++ b/dataclean.tex
@@ -34,11 +34,10 @@ proportion of time at the longest location, and the number of DBE or
 OTB events.
 
 To get some intuition for the GPU lifetimes on Titan, we give two
-views of \rev{80} randomly selected GPUs and \rev{80} randomly
-selected locations \rev{in Fig.~\ref{fig:gpu-view}}.
-The GPU view
-visually documents the life of each GPU unit: when it was installed and
-removed at various locations, its DBE and OTB events, and the last
+views of \rev{90} randomly selected GPUs and \rev{90} randomly
+selected locations \rev{in Fig.~\ref{fig:gpu-view}}.  The GPU view
+visually documents the life of each GPU unit: when it was installed
+and removed at various locations, its DBE and OTB events, and the last
 time it was seen. The location view documents the life of a location:
 when different GPUs were installed and removed, their OTB and DBE
 events, and whether a removal was the last time the unit was seen on
