--- a/dataprep.tex
+++ b/dataprep.tex
@@ -67,10 +67,10 @@ number and locations are coded with {\tt c{\it col-row}c{\it
     cage}s{\it slot}n{\it node}}. The location references are cabinet
 column (0-24), row (0-7), cage (0-2), slot (0-7), and node (0-3) with
 respect to the layout shown in \rev{Fig.}~\ref{fig:layout}. \rev{Note
-  that there is an extra empty cabinet between columns 10 and 11 to
-  accommodate a few ceiling support columns. For
-  example, we mark location {\tt c17-4c1s3n1} with a yellow dot in
-  each view of the figure.}
+  that there is an extra empty column of cabinets between columns 10
+  and 11 to accommodate a few ceiling support columns. To aid
+  orientation in the figure, we mark an example location {\tt
+    c17-4c1s3n1} with a yellow dot in each view of the figure.}
 \begin{figure}
   \centering
   \includegraphics[width=\columnwidth]{figs/TitanCabinet.png}
