--- a/survival.tex
+++ b/survival.tex
@@ -114,10 +114,15 @@ through the cabinet to the top. The survival curves can be ordered
 ({\em cage 0, cage 1, cage 2}) in decreasing order of survival. As the
 blades are placed vertically within the cabinet, pairs of nodes too
 experience the same relationship with distance to the bottom, nodes 2
-and 3 having lower failure rates than nodes 0 and 1. \rev{An
-  increasing temperature gradient averaging about $4^\circ$C per
-  cage is reported in \cite[p.7]{tiwari15Understand}, independently
-  confirming our airflow temperature interpretation.}
+and 3 having lower failure rates than nodes 0 and 1.
+
+\rev{An increasing average temperature gradient of about $4^\circ$C
+  per cage is reported in \cite[Fig.10]{tiwari15Understand},
+  independently confirming our airflow temperature
+  interpretation. They also suggest that DBEs may be sensitive to
+  temperature, although consider their evidence preliminary due to
+  relatively low number of DBEs in 2014-1015 and high variability of
+  $10^\circ$C to $15^\circ$C in their measured cage replicates.}
 
 Very few failures have occurred in the new batch and they are clearly
 less prone to failure at the 2.5 year mark. There is a slight change
