recorded updates in reviews file

--- a/reviews/pap537.md
+++ b/reviews/pap537.md
@@ -40,13 +40,16 @@ V.
   replacement)? As you report, failure characteristics look different
   with the post 2017 batch being more reliable. For example, don’t the
   MTBFs in Fig. 7 look different for the two batches?
-  * *Rizwan: split old-new and make MTBF unit years*
+  * *Done: See updated Fig. (split old-new and units of years) and text in second paragraph of V. 
+     Rizwan: split old-new and make MTBF unit years*
 - With respect to failure events, what triggers the retirement or end
   of life of a GPU?
   * *See second paragraph of VI*
 - Fig. 10: How big are the partitions with old and new GPUs,
   respectively?
-  * *Rizwan: add info to graph*
+  * *Done: See updated Fig. with size of new partition plotted on secondary y-axis.
+     Some text was also updated in the second last paragraph of V.  
+     Rizwan: add info to graph*
 
 VI.
 - Can you please add references for all analysis methods mentioned in
@@ -77,7 +80,7 @@ VII.
 - I suggest showing separate graphs for the old and new GPU batches,
   e.g. in Fig. 2 and Fig. 7. 
   * *Not relevant to Fig 2. Figure 2 speaks to inventory times, which
-    were the same for old and new batches. Rizwan: Fig 7*
+    were the same for old and new batches. Done: Updated Fig. Rizwan: Fig 7*
 - Your data shows a clear correlation between reliability and
   location. Do you have location-specific operating conditions and
   environmental data available to strengthen this point?
@@ -252,7 +255,9 @@ clarifications. See suggestions below:
   use more bars (e.g. 2 weeks) and see the differences in the peaks. 2
   weeks is also more intuitive (= half a month, can be space between
   maintenance periods, etc.)
-  * *Rizwan: Also, converting to years as units would be more
+  * *Done: Updated Fig. 7 to have separate columns for DBE and OTB events,
+     each bar now represents 2 weeks, and converted to years as units.  
+     Rizwan: Also, converting to years as units would be more
     interpretable.* 
 
 ### Typographical errors:
