--- a/discussion.tex
+++ b/discussion.tex
@@ -5,11 +5,18 @@
 \section{\rev{Conclusions}}
 \label{section:discussion}
 
-The experienced unexpected reliability issues with the Titan supercomputer raise
-several questions and discussion points. First, there is the mitigation component
-that keeps the system operating at an acceptable level and possibly even restores
-some, if not all, of the lost capability. Second, there is the long-term planning
-component that addresses such scenarios in future-generation supercomputers.
+\rev{The failure rates of the old batch are not matched by the new
+  batch nor by experience at other facilities with the same type of
+  GPU components, making this an unexpected event that had
+  considerable impact on operations and on availability of the
+  system. On a positive but ironic note, the corrosion process in the
+  failing resistors made the GPUs act as a sensitive instrument for
+  obtaining long-term integrals of component heat dynamics and
+  provided lessons learned. Here we dicsuss the conclusions we can
+  draw from the experience on mitigation, which keeps the system
+  operating at an acceptable level and possibly even restores some of
+  the lost capability, and on long-term planning, which addresses such
+  scenarios in future-generation supercomputers.}
 
 %%%%%%%%%%%%
 % Mitigation
