--- a/reviews/pap537.md
+++ b/reviews/pap537.md
@@ -318,7 +318,7 @@ version:
     appear random (wide confidence intervals and statistically not
     significant).*
 	
-  *	*We are already discussin implementing some of these analyses and
+  *	*We are already discussing implementing some of these analyses and
     visualizations for data from Summit and Frontier. We also have
     better data collection implemented. (doubleblind this?)*
 	
