--- a/discussion.tex
+++ b/discussion.tex
@@ -10,13 +10,13 @@
   GPU components, making this an unexpected event that had
   considerable impact on operations and on availability of the
   system. On a positive but ironic note, the corrosion process in the
-  failing resistors made the GPUs act as a sensitive instrument for
-  obtaining long-term integrals of component heat dynamics and
-  provided lessons learned. Here we dicsuss the conclusions we can
-  draw from the experience on mitigation, which keeps the system
-  operating at an acceptable level and possibly even restores some of
-  the lost capability, and on long-term planning, which addresses such
-  scenarios in future-generation supercomputers.}
+  failing resistors made the specific GPU batch act as a sensitive
+  instrument for obtaining long-term integrals of component heat
+  dynamics and provided lessons learned. Here we dicsuss the
+  conclusions we can draw from the experience on mitigation, which
+  keeps the system operating at an acceptable level and possibly even
+  restores some of the lost capability, and on long-term planning,
+  which addresses such scenarios in future-generation supercomputers.}
 
 %%%%%%%%%%%%
 % Mitigation
