--- a/survival.tex
+++ b/survival.tex
@@ -212,7 +212,10 @@ different behavior in {\em col} 0-11 from {\em col} 12-24 is likely
   24, as can be seen in the floor layout of Fig.~\ref{fig:layout}. An
   explanation due to separate supply lines of chilled water to the two
   sets is not likely as the evaporators (see Fig.~\ref{fig:layout})
-  are thermostat controlled.}
+  are thermostat controlled.} \fix{The file system, however. did not
+  have evaporator heat exchangers and relied on ambient room air for
+  heat transport, affecting room temperature on the right side of
+  Titan. !!Do we have room temp measurement data?!!}
 
 \rev{The peculiar interleaving pattern of the first set of columns can
   be explained by Titan's folded torus interconnect. If we order the
