--- a/intro.tex
+++ b/intro.tex
@@ -81,15 +81,18 @@ results presented here.
 We begin by describing related work in Sec.~\ref{section:related}. Our
 data collection is described in Sec.~\ref{section:dataprep} and the
 data cleaning, checking, and lifetime summarization process in
-Sec.~\ref{section:dataclean}. A time between failures (TBF) analysis
-is given in Sec.~\ref{section:tbf}. Survival analysis \rev{(SA)} based on
+Sec.~\ref{section:dataclean}. \rev{Here we develop novel
+  visualizations of GPU life times and errors that were needed to
+  understand the data and our data processing decisions.} A time
+between failures (TBF) analysis is given in
+Sec.~\ref{section:tbf}. Survival analysis \rev{(SA)} based on
 Kaplan-Meier modeling (KM) and Cox regression modeling (CR) of
 relative hazard rates in various locations are in
-Sec.~\ref{section:survival}. The goals of a TBF analysis and of
-SA are different: TBF studies largely \rev{show} GPU
-reliability affects the machine, whereas SA studies largely how the
-machine affects GPU reliability.  Finally, we discuss our main
-conclusions and recommendations in Sec.~\ref{section:discussion}.
+Sec.~\ref{section:survival}. The goals of a TBF analysis and of SA are
+different: TBF studies largely \rev{show} GPU reliability affects the
+machine, whereas SA studies largely how the machine affects GPU
+reliability.  Finally, we discuss our main conclusions and
+recommendations in Sec.~\ref{section:discussion}.
  
 
 
