--- a/intro.tex
+++ b/intro.tex
@@ -91,8 +91,11 @@ relative hazard rates in various locations are in
 Sec.~\ref{section:survival}. The goals of a TBF analysis and of SA are
 different: TBF studies largely \rev{show} GPU reliability affects the
 machine, whereas SA studies largely how the machine affects GPU
-reliability.  Finally, we discuss our main conclusions and
-recommendations in Sec.~\ref{section:discussion}.
+reliability. \rev{The application of SA methods is novel in the HPC
+  reliability context. It has roots in biostatistics and epidemiology,
+  where it is used to discover causes of disease.} Finally, we discuss
+our main conclusions and recommendations in
+Sec.~\ref{section:discussion}.
  
 
 
