--- a/dataprep.tex
+++ b/dataprep.tex
@@ -7,8 +7,8 @@
 Data on Titan GPU life times is constructed from two sources:
 inventory runs and failure event \rev{log} records. Two types of
 failure events were collected \rev{for this study}: Double Bit Error
-(DBE) and Off the Bus (OTB). \rev{DBE is a memory error detected by
-  parity bit checking, which can correct a single bit flip and detect
+(DBE) and Off the Bus (OTB). \rev{DBE is an error correcting code (ECC)
+  detection in GPU memory, which can correct a single bit flip and detect
   but not correct a double bit flip. OTB is the loss of host CPU
   connection to the GPU. While other types of errors were recorded in
   log files, as is reported in \cite{7266836,tiwari15Understand}, OTB
