preparing for OLCF import

--- a/dataprep.tex
+++ b/dataprep.tex
@@ -81,17 +81,18 @@ respect to the layout shown in \rev{Fig.}~\ref{fig:layout}. \rev{Note
   \begin{minipage}{0.49\columnwidth}
     \includegraphics[width=\columnwidth]{figs/TitanLayout.png}
   \end{minipage}
-  \caption{\rev{Titan cabinet (front view and side view with air flow)
-      and single blade layout (bottom left with {\em node} numbers)
-      and floor layout (bottom right with {\em col} and {\em row}
-      numbers). Cooling airflow is bottom to top within a cabinet,
-      taking ambient air in mostly at the foot and relasing it back
-      out at the top. Cooling fluid is passed through heat exchange
-      evaporators, below Cage 0 and above Cage 2. Ambient air in the
-      room is conditioned at nominal 75$^\circ$~F. The room air system
-      has a dozen intakes near the ceiling and dumps cool air under
-      the floor in several locations. A number of floor tiles are
-      perforated.  Yellow dot marks GPU location {\tt c17-4c1s3n1}.}}
+  \caption{\rev{Titan cabinet (front view and left side view with air
+      flow) and single blade layout (bottom left with {\em node}
+      numbers) and floor layout (bottom right with {\em col} and {\em
+        row} numbers). Cooling airflow is bottom to top within a
+      cabinet, taking ambient air in mostly at the foot and relasing
+      it back out at the top. Cooling fluid is passed through heat
+      exchange evaporators, below Cage 0 and above Cage 2. Ambient air
+      in the room is conditioned at nominal 75$^\circ$~F. The room air
+      system has a dozen intakes near the ceiling and dumps cool air
+      under the floor in several locations. A number of floor tiles
+      are perforated.  Yellow dot marks GPU location {\tt
+        c17-4c1s3n1}.}}
   \label{fig:layout}
 \end{figure}
 
