--- a/discussion.tex
+++ b/discussion.tex
@@ -12,12 +12,12 @@
   system. On a positive but ironic note, the corrosion process in the
   failing resistors made the specific GPU batch act as sensitive
   instruments for obtaining cummulative trend information from
-  component heat dynamics and provided lessons learned. Here we
-  dicsuss the conclusions we can draw from the experience on
-  mitigation, which keeps the system operating at an acceptable level
-  and possibly even restores some of the lost capability, and on
-  long-term planning, which addresses such scenarios in
-  future-generation supercomputers.}
+  component heat dynamics, giving the current analysis the strong
+  signals observed, and provided lessons learned. Here we dicsuss the
+  conclusions we can draw from the experience on mitigation, which
+  keeps the system operating at an acceptable level and possibly even
+  restores some of the lost capability, and on long-term planning,
+  which addresses such scenarios in future-generation supercomputers.}
 
 %%%%%%%%%%%%
 % Mitigation
