--- a/code/README
+++ b/code/README
@@ -1,9 +1,14 @@
 To run .Rmd file:
 
 Download and install R (version >= 3.6.1)
-Download and install RStudio (version >= )
+Download and install RStudio (version >= 1.3)
 Open the file with RStudio
 Click on Knit in the top left pane.
 Follow any prompts to install a number of packages.
 
+You may need to click on Knit again after installing all packages.
+
+The output is an HTML file, viewable in a browser, that reproduces
+graphics in the paper and more. As a side effect, it also rewrites the
+graphics in the ../figs directory of your local git clone.
 
